# core

./: .gitignore  Cargo.toml
.github/workflows/: cli.yml  pull_request.yml
documentation/: book.toml
documentation/src/: SUMMARY.md  architecture.md  getting-started.md  install.md  introduction.md  pre-requisites.md
documentation/src/commands/: analyse.md  index.md  init.md  invest.md
documentation/src/finance/: index.md
documentation/src/finance/equity/: board-consent.md  index.md  investor-questionnaire.md  preferred-stock-agreement.md  restated-certificate-of-incorporation.md  stockholder-consent.md  term-sheet.md
documentation/src/finance/notes/: board-consent.md  convertible-promissory-note.md  index.md  investor-questionnaire.md  term-sheet.md
documentation/src/getting-started/: index.md  structure.md
documentation/src/install/: check.md  index.md  problems.md  source.md
documentation/src/mdbook-plantuml-img/: 60e36a03-7683-4902-9b89-5a3928b77c0b.puml  b47d1251-20af-4ef5-b538-30c913c0124c.puml
documentation/src/methodologies/: repo_analysis.md
scripts/: install-cli.sh  run-release.sh
services/cli/: Cargo.toml
services/cli/src/: analyse.rs  analyze.rs  contributor.rs  init.rs  main.rs  stats.rs  subcommands.rs
